# itba-cde-pda

./: .gitignore  Nbtest.ipynb  README.md  etl.py  pyproject.toml  utils.py
.github/workflows/: run-tests.yml
airflow-etl/: airflow.cfg  docker-compose.yml
airflow-etl/dags/: dags_etl.py
airflow-etl/dags/module_etl/: utils.py
airflow-etl/module_etl/: __init__.py  etl.py  queries.sql  utils.py
airflow-etl/module_etl/queries/: ranking_channels.sql  subscribers_upsert.sql  videos_upsert.sql
airflow-etl/pgdata/: postmaster.pid
airflow-etl/pgdata/base/13468/: pg_internal.init
airflow-etl/pgdata/base/16384/: 1247  1249  1259  16385  16387  16387_vm  16393  16394  16396  16397  16398  16399  16404  16405  16407  16415  16416  16418  16427  16428  16430  16431  16440  16441  16444  16446  16446_fsm  16452  16453  16455  16456  16457  16458  16460  16466  16467  16469  16471  16473  16479  (+157 more)
airflow-etl/pgdata/global/: pg_control  pg_internal.init
airflow-etl/pgdata/pg_stat_tmp/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
airflow-etl/pgdata/pg_xact/: 0000
airflow-etl/sql/: queries.sql
airflow-etl/tests/: __init__.py  test_youtube_api.py
