[tool.poetry]
name = "itba-cde-pda"
version = "0.1.0"
description = ""
authors = ["fsantoliquido"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
google-api-python-client = "^2.145.0"
pandas = "1.5.3"
ipykernel = "^6.29.5"
isodate = "^0.6.1"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
